# party-debate-agent

./: .env.example  .gitignore  README.md  app.py  ingest_data.sh  party_debate_agent_demo.pptx  pyproject.toml
data/config/: parties.yaml  sources.yaml
src/: __init__.py  pipeline_stats.py
src/agents/: __init__.py  fact_checker.py  llm_client.py  moderator.py  party_agent.py  summarizer.py  voter_panel.py
src/debate/: __init__.py  graph.py  models.py  prompts.py  state.py
src/ingest/: __init__.py  chunking.py  ingest_party_sources.py  ingest_riksdag.py
src/rag/: __init__.py  inspect_index.py  retriever.py  vector_store.py
tests/: test_app_cli.py  test_chunking.py  test_claim_schema.py  test_config.py  test_debate_graph_rounds.py  test_hash_embedding_function.py  test_ingest_extraction.py  test_ingest_riksdag.py  test_party_agent_llm.py  test_party_extension.py  test_pipeline_stats.py  test_retriever.py  test_vector_store_rebuild.py  test_voter_panel.py
