[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "party-debate-agent"
version = "0.1.0"
description = "Svensk partiledardebatt-simulator med konfigurationsdrivna parti-agenter."
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.0",
  "langgraph>=0.2.0",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
